<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hostAndPortLabel">Host/IP &amp; Port of Cmus</string>
    <string name="app_name">Cmus Droid Remote</string>

    <string name="passwordLabel">Password</string>
    <string name="commandLabel">Command</string>
    <string name="setButtonLabel">Set</string>
    <string name="playButtonLabel">Play</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="stopButtonLabel">Stop</string>
    <string name="nextButtonLabel">Next</string>
    <string name="previousButtonLabel">Previous</string>
    <string name="shuffleButtonLabel">Shuffle</string>
    <string name="vDownButtonLabel">Vol -</string>
    <string name="vUpButtonLabel">Vol +</string>
    <string name="muteButtonLabel">Mute</string>
    <string name="seekLeftButtonLabel">-5</string>
    <string name="seekRightButtonLabel">+5</string>

    <string name="portHint">Port</string>
</resources>
